--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "mapbox-gl": "^1.6.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.12.0",
+    "react-map-gl": "^5.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "serialize-javascript": "^2.1.2"
