first heroku commit

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lead-us-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.12.0"
+  },
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^4.0.2",
     "@testing-library/jest-dom": "^4.2.4",
