--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "serialize-javascript": "^2.1.2"
   },
   "scripts": {
-    "start": "PORT=3005 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
